--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,8 +2,20 @@
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
+  display: flex;
+  border-bottom: solid black 1px;
 }
 
 #logo {
   color: MediumAquamarine;
+  display: inline-block;
+}
+
+nav {
+  display: inline-block;
+}
+
+li {
+  display: inline-block;
+  list-style: none;
 }
