--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,75 +1,64 @@
-#container {
+body {
   font-family: Georgia;
 }
 
-#header {
+header {
+  display: flex;
+  border-bottom: solid black 1px;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
-  display: flex;
-  border-bottom: solid black 1px;
   padding-bottom: 10px;
 }
 
 #logo {
+  display: flex;
+  flex: 1;
+}
+
+#logoText {
+  position: relative;
+  left: 10px;
   color: MediumAquamarine;
-  display: inline-block;
-  margin-left: 10px;
 }
 
 nav {
   display: inline-block;
-  position: relative;
 }
 
 li {
   display: inline-block;
-  list-style: none;
 }
 
-#content {
+#mainContent {
   display: flex;
 }
 
-.column {
-  display: inline-flex;
-}
-
-.column.large {
+.large {
+  display: flex;
+  flex-direction: column;
   width: 630px;
 }
 
-.column.medium {
+#largeSmall {
+ display: flex;
+}
+
+#pictureArticles {
+  display: flex;
+  direction: column;
+}
+
+#medium {
   width: 300px;
 }
 
-.column.small {
+#small {
+  display: flex;
+  direction: column;
   width: 240px;
 }
 
-#mainImage {
-  color: white;
-  background-image: url("../main_story.png");
-  background-repeat: no-repeat;
-  height: 400px;
-  width: 600px;
-  text-align: center;
-}
-
-#earth {
-  background-image: url("../fall_season.png")
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-#camera {
-  background-image: url("../hipster_cameraman.png")
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-#cats {
-  background-image: url("../cat_ceo.png")
-  background-repeat: no-repeat;
-  background-size: contain;
+#footer {
+  display: flex;
 }
