--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,6 +79,9 @@ li {
 #medium {
   width: 300px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
 }
 
 #small {
