--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -175,6 +175,28 @@ img.cookie {
   width: 280px;
 }
 
-#footer {
+footer {
   display: flex;
+  direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  height: 300px;
+}
+
+#footerLogo {
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  border-right: solid white 2px;
+  padding-right: 30px;
+  height: 20px;
+}
+
+#footerLinks {
+  padding-right: 20px;
 }
